[gd_scene load_steps=17 format=2]

[ext_resource path="res://script/menu/AnaMenuButonlar.gd" type="Script" id=1]
[ext_resource path="res://resimler/arkaplan/anamenuarka7.png" type="Texture2D" id=2]
[ext_resource path="res://tscndosyalari/menu/ParaTablo.tscn" type="PackedScene" id=3]
[ext_resource path="res://resimler/menu/anamenu/galeri4.png" type="Texture2D" id=4]
[ext_resource path="res://resimler/menu/anamenu/garaj2.png" type="Texture2D" id=5]
[ext_resource path="res://resimler/menu/anamenu/pistler3.png" type="Texture2D" id=6]
[ext_resource path="res://resimler/menu/anamenu/zk2.png" type="Texture2D" id=7]
[ext_resource path="res://resimler/menu/anamenu/market.png" type="Texture2D" id=9]
[ext_resource path="res://script/menu/AnaMenuCeviri.gd" type="Script" id=10]
[ext_resource path="res://script/menu/AnaMenuTuto.gd" type="Script" id=11]
[ext_resource path="res://resimler/menu/anamenu/basarimlar.png" type="Texture2D" id=12]
[ext_resource path="res://resimler/menu/anamenu/ayarlar2.png" type="Texture2D" id=14]
[ext_resource path="res://resimler/menu/garaj/bos.png" type="Texture2D" id=15]
[ext_resource path="res://font/new_dynamicfont.tres" type="FontFile" id=16]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.266667, 0.0196078, 0.0196078, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.631373, 0.223529, 0.223529, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.694118, 0.133333, 0.133333, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.443137, 0.0666667, 0.0666667, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="AnaMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Arkaplan" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 11 )

[node name="hb" type="HBoxContainer" parent="."]
offset_top = 52.0
offset_right = 1280.0
offset_bottom = 720.0
custom_minimum_size = Vector2( 1280, 0 )

[node name="araba" type="TextureRect" parent="hb"]
offset_right = 500.0
offset_bottom = 668.0
custom_minimum_size = Vector2( 500, 0 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 4
flip_h = true

[node name="gc" type="GridContainer" parent="hb"]
offset_left = 504.0
offset_right = 1279.0
offset_bottom = 560.0
custom_minimum_size = Vector2( 775, 0 )
clip_contents = true
size_flags_vertical = 0
theme_override_constants/v_separation = 0
theme_override_constants/h_separation = 0
columns = 2
script = ExtResource( 10 )

[node name="Zk" type="Control" parent="hb/gc"]
offset_right = 388.0
offset_bottom = 140.0
custom_minimum_size = Vector2( 380, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zkbutonu" type="Button" parent="hb/gc/Zk"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -62.5
offset_right = 175.0
offset_bottom = 62.5
custom_minimum_size = Vector2( 350, 125 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 16 )
theme_override_styles/hover = SubResource( 14 )
theme_override_styles/pressed = SubResource( 14 )
theme_override_styles/normal = SubResource( 13 )
text = "Zamana Karşı!"
align = 2

[node name="Zkbutonu" type="TextureRect" parent="hb/gc/Zk/Zkbutonu"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
texture = ExtResource( 7 )
expand = true

[node name="1v1" type="Control" parent="hb/gc"]
offset_left = 388.0
offset_right = 775.0
offset_bottom = 140.0
custom_minimum_size = Vector2( 380, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="yarisbutonu" type="Button" parent="hb/gc/1v1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -62.5
offset_right = 175.0
offset_bottom = 62.5
custom_minimum_size = Vector2( 350, 125 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 16 )
theme_override_styles/hover = SubResource( 14 )
theme_override_styles/pressed = SubResource( 14 )
theme_override_styles/normal = SubResource( 13 )
text = "              Bota Karşı!"

[node name="yarisbutonu" type="TextureRect" parent="hb/gc/1v1/yarisbutonu"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
texture = ExtResource( 7 )
expand = true

[node name="Galeri" type="Control" parent="hb/gc"]
offset_top = 140.0
offset_right = 388.0
offset_bottom = 280.0
custom_minimum_size = Vector2( 0, 140 )

[node name="Galeributonu" type="Button" parent="hb/gc/Galeri"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -62.5
offset_right = 175.0
offset_bottom = 62.5
custom_minimum_size = Vector2( 350, 125 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 16 )
theme_override_styles/hover = SubResource( 14 )
theme_override_styles/pressed = SubResource( 14 )
theme_override_styles/normal = SubResource( 13 )
text = "          Galeri"

[node name="Galeributonu" type="TextureRect" parent="hb/gc/Galeri/Galeributonu"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 4 )
expand = true

[node name="Market" type="Control" parent="hb/gc"]
offset_left = 388.0
offset_top = 140.0
offset_right = 775.0
offset_bottom = 280.0
custom_minimum_size = Vector2( 380, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Marketbutonu" type="Button" parent="hb/gc/Market"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -62.5
offset_right = 175.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource( 16 )
theme_override_styles/hover = SubResource( 14 )
theme_override_styles/pressed = SubResource( 14 )
theme_override_styles/normal = SubResource( 13 )
text = "          Dükkan"

[node name="Marketbutonu" type="TextureRect" parent="hb/gc/Market/Marketbutonu"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 9 )
expand = true

[node name="Garaj" type="Control" parent="hb/gc"]
offset_top = 280.0
offset_right = 388.0
offset_bottom = 420.0
custom_minimum_size = Vector2( 380, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Garajbutonu" type="Button" parent="hb/gc/Garaj"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -62.5
offset_right = 175.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2( 350, 125 )
theme_override_fonts/font = ExtResource( 16 )
theme_override_styles/hover = SubResource( 14 )
theme_override_styles/pressed = SubResource( 14 )
theme_override_styles/normal = SubResource( 13 )
text = "          Garaj"

[node name="Garajbutonu" type="TextureRect" parent="hb/gc/Garaj/Garajbutonu"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 5 )
expand = true

[node name="Pistler" type="Control" parent="hb/gc"]
offset_left = 388.0
offset_top = 280.0
offset_right = 775.0
offset_bottom = 420.0
custom_minimum_size = Vector2( 380, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pistlerbutonu" type="Button" parent="hb/gc/Pistler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -62.5
offset_right = 175.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource( 16 )
theme_override_styles/hover = SubResource( 14 )
theme_override_styles/pressed = SubResource( 14 )
theme_override_styles/normal = SubResource( 13 )
text = "          Dünya"

[node name="Pistlerbutonu" type="TextureRect" parent="hb/gc/Pistler/Pistlerbutonu"]
modulate = Color( 0.690196, 0.690196, 0.690196, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 6 )
expand = true

[node name="Basarimlar" type="Control" parent="hb/gc"]
offset_top = 420.0
offset_right = 388.0
offset_bottom = 560.0
custom_minimum_size = Vector2( 380, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Basarimlarbutonu" type="Button" parent="hb/gc/Basarimlar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -62.5
offset_right = 175.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource( 16 )
theme_override_styles/hover = SubResource( 14 )
theme_override_styles/pressed = SubResource( 14 )
theme_override_styles/normal = SubResource( 13 )
text = "          Başarımlar"

[node name="Basarimlarbutonu" type="TextureRect" parent="hb/gc/Basarimlar/Basarimlarbutonu"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 12 )
expand = true

[node name="AyarlarveOyuncu" type="Control" parent="hb/gc"]
offset_left = 388.0
offset_top = 420.0
offset_right = 775.0
offset_bottom = 560.0
custom_minimum_size = Vector2( 380, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ayarlarbutonu" type="Button" parent="hb/gc/AyarlarveOyuncu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -369.0
offset_top = -62.0
offset_right = -219.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2( 150, 125 )
theme_override_fonts/font = ExtResource( 16 )
theme_override_styles/hover = SubResource( 14 )
theme_override_styles/pressed = SubResource( 14 )
theme_override_styles/normal = SubResource( 13 )

[node name="Ayarlarbutonu" type="TextureButton" parent="hb/gc/AyarlarveOyuncu/Ayarlarbutonu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -62.5
offset_right = 62.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture_normal = ExtResource( 14 )
expand = true

[node name="Oyuncubutonu" type="Button" parent="hb/gc/AyarlarveOyuncu"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -62.0
offset_right = 168.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2( 150, 125 )
theme_override_fonts/font = ExtResource( 16 )
theme_override_styles/hover = SubResource( 14 )
theme_override_styles/pressed = SubResource( 14 )
theme_override_styles/normal = SubResource( 13 )

[node name="Oyuncubutonu" type="TextureButton" parent="hb/gc/AyarlarveOyuncu/Oyuncubutonu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand = true

[node name="ParaTablo" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1280.0
offset_bottom = 0.0

[connection signal="pressed" from="hb/gc/Zk/Zkbutonu" to="." method="_on_Zkbutonu_pressed"]
[connection signal="pressed" from="hb/gc/1v1/yarisbutonu" to="." method="_on_yarisbutonu_pressed"]
[connection signal="pressed" from="hb/gc/Galeri/Galeributonu" to="." method="_on_Galeributonu_pressed"]
[connection signal="pressed" from="hb/gc/Market/Marketbutonu" to="." method="_on_Marketbutonu_pressed"]
[connection signal="pressed" from="hb/gc/Garaj/Garajbutonu" to="." method="_on_Garajbutonu_pressed"]
[connection signal="pressed" from="hb/gc/Pistler/Pistlerbutonu" to="." method="_on_Pistlerbutonu_pressed"]
[connection signal="pressed" from="hb/gc/Basarimlar/Basarimlarbutonu" to="." method="_on_Basarimlarbutonu_pressed"]
[connection signal="pressed" from="hb/gc/AyarlarveOyuncu/Ayarlarbutonu" to="." method="_on_Ayarlarbutonu_pressed"]
[connection signal="pressed" from="hb/gc/AyarlarveOyuncu/Oyuncubutonu" to="." method="_on_Oyuncubutonu_pressed"]
