[gd_scene load_steps=19 format=2]

[ext_resource path="res://tscndosyalari/menu/AnaMenuyeDonTusu.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscndosyalari/menu/ParaTablo.tscn" type="PackedScene" id=2]
[ext_resource path="res://resimler/arkaplan/anamenuarka7.png" type="Texture2D" id=3]
[ext_resource path="res://script/menu/AnaMenuButonlar.gd" type="Script" id=4]
[ext_resource path="res://resimler/menu/dunya/pistsatinal.png" type="Texture2D" id=5]
[ext_resource path="res://resimler/menu/dunya/hiztesti.png" type="Texture2D" id=6]
[ext_resource path="res://script/menu/Dunya.gd" type="Script" id=7]
[ext_resource path="res://script/menu/KoyuMod.gd" type="Script" id=8]
[ext_resource path="res://font/new_dynamicfont.tres" type="FontFile" id=9]
[ext_resource path="res://font/hemi-head-426.rg-bolditalic.ttf" type="FontFile" id=10]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="Theme" id=11]
HScrollBar/styles/scroll = SubResource( 9 )
ScrollContainer/styles/bg = SubResource( 10 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.184314, 0.0117647, 0.0117647, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.133333, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.32549, 0.0352941, 0.0352941, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.392157, 0.0862745, 0.0862745, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 40.0
expand_margin_right = 40.0
expand_margin_top = 40.0
expand_margin_bottom = 40.0

[sub_resource type="FontFile" id=24]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 64.0
expand_margin_bottom = 68.0

[sub_resource type="Theme" id=34]
default_font = ExtResource( 9 )
Button/styles/hover = SubResource( 32 )
Button/styles/normal = SubResource( 33 )
Button/styles/pressed = SubResource( 32 )
Popup/styles/panel = null
PopupPanel/styles/panel = null
TabContainer/colors/font_color_bg = Color( 0.69, 0.69, 0.69, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
TabContainer/constants/h_separation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = ExtResource( 9 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = null
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = null
Window/colors/title_color = Color( 0.866667, 0.807843, 0.807843, 1 )
Window/constants/close_h_offset = 50
Window/constants/close_v_offset = 30
Window/constants/scaleborder_size = 3
Window/constants/title_height = -96
Window/fonts/title_font = SubResource( 24 )
Window/icons/close = null
Window/icons/close_highlight = null
Window/styles/panel = SubResource( 25 )

[node name="Dunya" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2( -532, -34 )
mouse_filter = 2
theme = SubResource( 11 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
script = ExtResource( 8 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -696.0
offset_top = -296.0
offset_right = 728.0
offset_bottom = 216.0
color = Color( 0, 0, 0, 0.490196 )

[node name="anamenuyedon" parent="." instance=ExtResource( 1 )]

[node name="HScrollBar" type="ScrollContainer" parent="."]
offset_left = 2.0
offset_top = 152.0
offset_right = 1282.0
offset_bottom = 652.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HScrollBar"]
offset_right = 1320.0
offset_bottom = 400.0
mouse_filter = 2
alignment = 1

[node name="Control2" type="Control" parent="HScrollBar/HBoxContainer"]
offset_right = 250.0
offset_bottom = 400.0
custom_minimum_size = Vector2( 250, 400 )

[node name="dunyatutorial" type="Control" parent="HScrollBar/HBoxContainer"]
offset_left = 254.0
offset_right = 354.0
offset_bottom = 400.0
custom_minimum_size = Vector2( 100, 400 )
script = ExtResource( 7 )

[node name="TestPist" type="TextureButton" parent="HScrollBar/HBoxContainer"]
offset_left = 358.0
offset_right = 608.0
offset_bottom = 400.0
custom_minimum_size = Vector2( 250, 400 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )

[node name="PistSatinAl" type="TextureButton" parent="HScrollBar/HBoxContainer"]
offset_left = 612.0
offset_right = 862.0
offset_bottom = 400.0
custom_minimum_size = Vector2( 250, 400 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )

[node name="Control3" type="Control" parent="HScrollBar/HBoxContainer"]
offset_left = 866.0
offset_right = 1066.0
offset_bottom = 400.0
custom_minimum_size = Vector2( 200, 400 )

[node name="Control4" type="Control" parent="HScrollBar/HBoxContainer"]
offset_left = 1070.0
offset_right = 1320.0
offset_bottom = 400.0
custom_minimum_size = Vector2( 250, 400 )

[node name="ParaTablo" parent="." instance=ExtResource( 2 )]
mouse_filter = 2

[node name="uyari" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 100.0
theme = SubResource( 34 )
window_title = "Secili Araban Yok."

[connection signal="pressed" from="HScrollBar/HBoxContainer/TestPist" to="." method="_on_TestPist_pressed"]
[connection signal="pressed" from="HScrollBar/HBoxContainer/PistSatinAl" to="." method="_on_PistSatinAl_pressed"]
